WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302117
[Safe CPP] Address warnings in LayerOverlapMap
https://bugs.webkit.org/show_bug.cgi?id=302117
Summary
[Safe CPP] Address warnings in LayerOverlapMap
Brandon
Reported
2025-11-06 13:44:06 PST
Address Safe CPP warnings LayerOverlapMap.cpp/h.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-06 13:44:13 PST
<
rdar://problem/164198178
>
Brandon
Comment 2
2025-11-06 13:45:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53556
EWS
Comment 3
2025-11-07 02:26:36 PST
Committed
302716@main
(9565391573f5): <
https://commits.webkit.org/302716@main
> Reviewed commits have been landed. Closing PR #53556 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug