[Safe CPP] Address warnings in LayerOverlapMap https://bugs.webkit.org/show_bug.cgi?id=302117 rdar://problem/164198178

Reviewed by Chris Dumez.

Address Safe CPP warnings LayerOverlapMap.cpp/h.

* Source/WebCore/SaferCPPExpectations/NoUncheckedPtrMemberCheckerExpectations
* Source/WebCore/SaferCPPExpectations/UncheckedCallArgsCheckerExpectations
* Source/WebCore/rendering/LayerOverlapMap.cpp
* Source/WebCore/rendering/LayerOverlapMap.h
* Source/WebCore/rendering/RenderLayerCompositor.cpp

Canonical link: https://commits.webkit.org/302716@main